--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,23 +10,50 @@
 
  #contenedor {
     width: 1400px;
-    height: 1000px;
+    height: 840px;
     background-color: rgb(255, 255, 255);
  }
 
  #encabezado {
-    
-    height: 10%;
-    background-color: rgb(21, 207, 157);
-    margin: 0em;
+   display: flex;
+   justify-content: center;
+   height: 70px;
+   align-items: center;
+   background-color: rgb(131, 160, 255);
+   padding: 10px;
+   margin: 1em;
+   border-radius: 10px;
+ }
+
+ #encabezado h2{
+   margin-left: 8px;
  }
 
 
  #menu {
-    height: 10%;
+    display: flex;
+    justify-content: center;
+    height: 5%;
     background-color: rgb(137, 159, 223);
-    margin: 0em;
+    margin: 1em;
+    border-radius: 10px;
+    margin: auto 1em;
+    padding: 10px;
+    align-items: center;
+    
  }
+
+ #menu a{
+   font-weight: 600;
+   padding-right: 10px;
+   font-family:  sans-serif;
+   font-size: 20px;
+   margin-top: 2%;
+}
+
+#menu a:hover{
+   color: white;
+}
 
  #contenido {
     height: 70%;
@@ -34,22 +61,28 @@
     background-color: white;
     margin: 0.5em;
     float: left;
-
  }
 
- #fuerasSeccion {
-    height: 70%;
+ #fuerasseccion {
+    height: 50%;
     width: 20%;
-    background-color: rgb(186, 247, 209);float: right;
+    background-color: rgb(255, 255, 255);float: right;
     margin: 0.5em;
     border-radius: 4px;
-
  }
+#fuerasseccion h3{
+   
+   text-align: center;
+} 
+
  #pie {
-    height: 5%;
-    background-color: rgb(154, 154, 154);
-    border-radius: 1em;
-    margin: 1.5em;
+    height: 1%;
+    width: 1400px;
+    background-color: white;
+    margin: 1em;
+    text-align: center;
+    padding-top: 50px;
+
     
  }
 
@@ -69,6 +102,7 @@
     color: rgb(0, 0, 0);
     margin: auto 1em;
     padding: 10px;
+    border-radius: 10px;
     font-family: Tahoma;
  }
 
@@ -100,16 +134,7 @@ a{
    text-decoration: none;
    color: black;
 }
-header{
-   display: flex;
-   justify-content: space-between;
-   height: 70px;
-   align-items: center;
-   background-color: rgb(131, 160, 255);
-   padding: 10px;
-   margin: 1em;
-   border-radius: 10px;
-}
+
 
 .logo{
    display: flex;
@@ -127,13 +152,7 @@ header{
    font-family:  sans-serif;
    margin: 0;
 }
-nav a{
-   font-weight: 600;
-   padding-right: 10px;
-   font-family:  sans-serif;
-   font-size: 20px;
-}
 
-nav a:hover{
-   color: white;
+aside a img {
+   width: 300px;
 }
